Make the content more compact and prevent harsh flex cutoff when container is too small

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -6,6 +6,7 @@
 body {
   background: var(--dialog-background);
   padding:    0.75rem 0;
+  min-width:  fit-content;
 }
 
 body.dragging, body.dragging * {
@@ -43,8 +44,7 @@ body.dragging, body.dragging * {
 }
 
 #content-pane {
-  height: 38rem;
-  width:  70%;
+  padding-inline: 5%;
 }
 
 .checkmark {
@@ -177,7 +177,7 @@ body.dragging, body.dragging * {
 
 .main-outputs {
   gap:    0.3rem;
-  margin: 1.5rem 0;
+  margin: 1.5rem 0 0 0;
 }
 
 .output-field {
@@ -233,6 +233,14 @@ body.dragging, body.dragging * {
 }
 
 .tab-strip {
-  margin-bottom: 1.5rem;
   position:      relative;
+}
+
+.gap {
+  gap: 3rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
